--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -6,4 +6,4 @@ set(SOURCES
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
-target_sources(jacobian PUBLIC ${SOURCES})
+target_sources(bezier PUBLIC ${SOURCES})
