--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SOURCES
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
-target_sources(jacobian PRIVATE ${SOURCES})
+target_sources(bezier PRIVATE ${SOURCES})
 
 ################################################################################
 # Subfolders
