--- a/src/validity/CMakeLists.txt
+++ b/src/validity/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(HEADERS
-    # SubdivisionHierarchy.hpp
-    Timer.hpp
+    element_validity.hpp
+)
+
+set(SOURCES
+    element_validity.cpp
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
