--- a/src/validity/CMakeLists.txt
+++ b/src/validity/CMakeLists.txt
@@ -2,13 +2,14 @@ set(HEADERS
     element_validity.hpp
     lagrangeVector.hpp
     transMatrices.hpp
+    cornerIndices.hpp
 )
 
 set(SOURCES
-    element_validity.cpp
     lagrangeVector.cpp
     transMatrices.cpp
+    cornerIndices.cpp
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
-target_sources(bezier PUBLIC ${SOURCES})
+target_sources(bezier PRIVATE ${SOURCES})
