--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -5,4 +5,4 @@ set(HEADERS
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
-target_sources(bezier PUBLIC ${SOURCES})
+target_sources(bezier PRIVATE ${SOURCES})
