--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -2,6 +2,11 @@ set(HEADERS
     globals.hpp
     Timer.hpp
     combinatorics.hpp
+    Settings.hpp
+    helpString.hpp
+)
+set(SOURCES
+    Settings.cpp
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
