--- a/src/validity/CMakeLists.txt
+++ b/src/validity/CMakeLists.txt
@@ -16,6 +16,10 @@ set(SOURCES
 	lagrangeVector_1_1_4.cpp
 	transMatrices_1_1_5.cpp
 	lagrangeVector_1_1_5.cpp
+    transMatrices_2_1_1.cpp
+	lagrangeVector_2_1_1.cpp
+	transMatrices_2_1_2.cpp
+	lagrangeVector_2_1_2.cpp
 	transMatrices_2_2_1.cpp
 	lagrangeVector_2_2_1.cpp
 	transMatrices_2_2_2.cpp
