--- a/src/validity/CMakeLists.txt
+++ b/src/validity/CMakeLists.txt
@@ -4,6 +4,7 @@ set(HEADERS
 	ContinuousValidator.hpp
 	cornerIndices.hpp
 	lagrangeVector.hpp
+	lagrangeEvaluate.hpp
 	transMatrices.hpp
 )
 
@@ -16,6 +17,7 @@ add_subdirectory(lagvec)
 add_subdirectory(lagvecT)
 add_subdirectory(transmat)
 add_subdirectory(transmatT)
+add_subdirectory(lageval)
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
 target_sources(bezier PRIVATE ${SOURCES})
