--- a/src/validity/lagvecT/CMakeLists.txt
+++ b/src/validity/lagvecT/CMakeLists.txt
@@ -14,7 +14,7 @@ set(SOURCES
 	lagrangeVectorT_3_3_2.cpp
 	lagrangeVectorT_2_2_4.cpp
 	lagrangeVectorT_3_3_3.cpp
-	lagrangeVectorT_3_3_4.cpp
+	# lagrangeVectorT_3_3_4.cpp
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
