--- a/src/validity/transmatT/CMakeLists.txt
+++ b/src/validity/transmatT/CMakeLists.txt
@@ -14,7 +14,7 @@ set(SOURCES
 	transMatricesT_3_3_2.cpp
 	transMatricesT_2_2_4.cpp
 	transMatricesT_3_3_3.cpp
-	transMatricesT_3_3_4.cpp
+	# transMatricesT_3_3_4.cpp
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
