--- a/src/validity/lagvecT/CMakeLists.txt
+++ b/src/validity/lagvecT/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCES
 	lagrangeVectorT_3_3_3.cpp
 	lagrangeVectorT_3_3_4.cpp
 )
+set_source_files_properties(lagrangeVectorT_3_3_4.cpp PROPERTIES COMPILE_FLAGS "-O0")
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
 target_sources(bezier PRIVATE ${SOURCES})
