--- a/src/validity/lagvecT/CMakeLists.txt
+++ b/src/validity/lagvecT/CMakeLists.txt
@@ -14,7 +14,7 @@ set(SOURCES
 	lagrangeVectorT_3_3_2.cpp
 	lagrangeVectorT_2_2_4.cpp
 	lagrangeVectorT_3_3_3.cpp
-	lagrangeVectorT_3_3_4.cpp
+	# lagrangeVectorT_3_3_4.cpp
 )
 set_source_files_properties(lagrangeVectorT_3_3_4.cpp PROPERTIES COMPILE_FLAGS "-O0")
 
