--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,22 @@ endif()
 
 cmake_minimum_required(VERSION 3.18)
 project(bezier)
-include(ExternalProject)
+
+
+file(GLOB BEZIER_SOURCES
+    "${BEZIER_SOURCE_DIR}/*.cpp"
+    "${BEZIER_SOURCE_DIR}/numbers/*.cpp"
+    "${BEZIER_SOURCE_DIR}/utils/*.cpp"
+    "${BEZIER_SOURCE_DIR}/validity/*.cpp"
+    "${BEZIER_SOURCE_DIR}/validity/*/*.cpp"
+)
+message("${BEZIER_SOURCES}")
+add_library(bezier ${GLOB_BEZIER_SOURCES})
+add_library(bezier::bezier ALIAS bezier)
+add_library(bezier_interface INTERFACE)
 
 # Set the C++ standard
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+target_compile_features(bezier PUBLIC cxx_std_20)
 
 # Options
 option(IPRED_ARITHMETIC "Use the efficient Indirect Predicates library" ON)
@@ -25,26 +36,24 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/recipes/")
 include(bezier_cpm_cache)
 
 if(LAGVEC_GCC_O0)
-    add_compile_definitions(LAGVEC_GCC_O0)
+    target_compile_definitions(bezier PRIVATE LAGVEC_GCC_O0)
 endif()
 
-# Set common compiler flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall \
-    -Wno-unknown-pragmas -fno-strict-aliasing -fopenmp -lpthread")
-
-# Set release and debug specific compiler flags
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -pg -ggdb3")
+target_compile_options(bezier INTERFACE
+    -Wall
+    -Wno-unknown-pragmas
+    -fno-strict-aliasing
+)
 
 # Use fast interval arithmetic
 if(DEFINED IPRED_ARITHMETIC)
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} \
-        -O2 -frounding-math -msse2 -mavx2 -mfma")
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} \
-        -frounding-math -msse2 -mavx2 -mfma")
+    target_compile_options(bezier_interface INTERFACE
+        -frounding-math
+        -msse2
+        -mavx2
+        -mfma
+    )
     set(USE_SIMD_INSTRUCTIONS ON)
-else()
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 endif()
 
 # Ensure the build type is set
@@ -53,9 +62,6 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
 endif()
 
-
-add_library(bezier)
-add_library(bezier::bezier ALIAS bezier)
 
 set(BEZIER_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
 set(BEZIER_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/src")
@@ -68,21 +74,28 @@ target_include_directories(bezier PUBLIC ${BEZIER_INCLUDE_DIR})
 # Required libraries
 ################################################################################
 
+##### OpenMP ###################################################################
+find_package(OpenMP)
+if (OpenMP_CXX_FOUND)
+    target_link_libraries(bezier_interface INTERFACE OpenMP::OpenMP_CXX)
+else()
+endif()
+
 ##### Eigen ####################################################################
 if (EIGEN_INTERFACE)
-    add_compile_definitions(EIGEN_INTERFACE)
+    target_compile_definitions(bezier_interface INTERFACE EIGEN_INTERFACE)
     include(eigen)
-    target_link_libraries(bezier PUBLIC Eigen3::Eigen)
+    target_link_libraries(bezier_interface INTERFACE Eigen3::Eigen)
 endif()
 
 ##### GMP ######################################################################
 find_package(GMP REQUIRED)
-target_link_libraries(bezier PUBLIC gmp::gmp)
+target_link_libraries(bezier PRIVATE gmp::gmp)
 
 
 ##### INDIRECT_PREDICATES ######################################################
 if (IPRED_ARITHMETIC)
-    add_compile_definitions(IPRED_ARITHMETIC)
+    target_compile_definitions(bezier_interface INTERFACE IPRED_ARITHMETIC)
 
     include(indirect_predicates)
 endif()
@@ -90,17 +103,17 @@ endif()
 
 ##### HDF5 #####################################################################
 if (HDF5_INTERFACE)
-    add_compile_definitions(HDF5_INTERFACE)
+    target_compile_definitions(bezier_interface INTERFACE HDF5_INTERFACE)
     find_package(HDF5 REQUIRED COMPONENTS C CXX)
     target_include_directories(bezier PUBLIC ${HDF5_INCLUDE_DIRS})
-    target_link_libraries(bezier PUBLIC ${HDF5_LIBRARIES} ${HDF5_CXX_LIBRARIES})
+    target_link_libraries(bezier PRIVATE ${HDF5_LIBRARIES} ${HDF5_CXX_LIBRARIES})
 endif()
 
 
 ##### EXECUTABLES ##############################################################
 if (BEZIER_TOPLEVEL_PROJECT)
     add_executable(bin ${PROJECT_SOURCE_DIR}/src/main.cpp)
-    target_link_libraries(bin PUBLIC bezier::bezier)
+    target_link_libraries(bin PRIVATE bezier::bezier)
 endif()
 
 ################################################################################
@@ -113,3 +126,6 @@ if(BEZIER_TOPLEVEL_PROJECT AND UNIT_TESTS)
     enable_testing()
     add_subdirectory(tests)
 endif()
+
+target_link_libraries(bezier PRIVATE bezier_interface)
+target_link_libraries(bin PRIVATE bezier_interface)
