added linear hex and prism

--- a/src/validity/lageval/CMakeLists.txt
+++ b/src/validity/lageval/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES
 	lagrangeEvaluate_2_2_2.cpp
 	lagrangeEvaluate_2_2_3.cpp
 	lagrangeEvaluate_3_1_1.cpp
+	lagrangeEvaluate_3_2_1.cpp
 	lagrangeEvaluate_3_3_1.cpp
 	lagrangeEvaluate_3_3_2.cpp
 	lagrangeEvaluate_2_2_4.cpp
