pulled changes from master and re-removed p4 tets

--- a/src/validity/lagvec/CMakeLists.txt
+++ b/src/validity/lagvec/CMakeLists.txt
@@ -15,7 +15,7 @@ set(SOURCES
 	lagrangeVector_3_3_2.cpp
 	lagrangeVector_2_2_4.cpp
 	lagrangeVector_3_3_3.cpp
-	lagrangeVector_3_3_4.cpp
+	# lagrangeVector_3_3_4.cpp
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
