--- a/src/validity/transmat/CMakeLists.txt
+++ b/src/validity/transmat/CMakeLists.txt
@@ -15,7 +15,7 @@ set(SOURCES
 	transMatrices_3_3_2.cpp
 	transMatrices_2_2_4.cpp
 	transMatrices_3_3_3.cpp
-	transMatrices_3_3_4.cpp
+	# transMatrices_3_3_4.cpp
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
