--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -59,7 +59,8 @@ jobs:
           cmake .. \
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} \
-            -DCMAKE_CXX_FLAGS_DEBUGNOSYMBOLS=""
+            -DCMAKE_CXX_FLAGS_DEBUGNOSYMBOLS="" \
+            -DHDF5_INTERFACE=OFF
 
       - name: Build
         run: cd build; make -j2; ccache --show-stats
@@ -112,7 +113,8 @@ jobs:
           cmake .. \
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} \
-            -DCMAKE_CXX_FLAGS_DEBUGNOSYMBOLS="" 
+            -DCMAKE_CXX_FLAGS_DEBUGNOSYMBOLS="" \
+            -DHDF5_INTERFACE=OFF
 
       - name: Build
         run: cd build; make -j2; ccache --show-stats
@@ -169,6 +171,7 @@ jobs:
             -DCMAKE_CONFIGURATION_TYPES="Release;Debug;RelWithDebInfo;MinSizeRel;DebugNoSymbols" ^
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} ^
             -DCMAKE_CXX_FLAGS_DEBUGNOSYMBOLS="/Od" -DCMAKE_EXE_LINKER_FLAGS_DEBUGNOSYMBOLS="" ^
+            -DHDF5_INTERFACE=OFF ^
             -B build ^
             -S .
 
