try to fix missing gmp on win

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ else()
 endif()
 
 ##### GMP ######################################################################
-find_package(GMP REQUIRED)
+include(gmp)
 target_link_libraries(bezier PRIVATE gmp::gmp)
 
 ##### Eigen ####################################################################
