--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -66,7 +66,7 @@ jobs:
         run: cd build; make -j2; ccache --show-stats
 
       - name: Tests
-        run: cd build; OMP_NUM_THREADS=1 ctest --verbose --output-on-failure
+        run: cd build; OMP_NUM_THREADS=1 ./tests/unit_tests
 
   ####################
   # MacOS
@@ -120,7 +120,7 @@ jobs:
         run: cd build; make -j2; ccache --show-stats
 
       - name: Tests
-        run: cd build; ctest --verbose --output-on-failure
+        run: cd build; ./tests/unit_tests
 
   ####################
   # Windows
@@ -182,4 +182,4 @@ jobs:
           cmake --build build -j2 && ccache --show-stats
 
       - name: Tests
-        run: cd build; ctest --verbose --output-on-failure
+        run: cd build; ./tests/unit_tests
