--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -60,7 +60,8 @@ jobs:
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} \
             -DCMAKE_CXX_FLAGS_DEBUGNOSYMBOLS="" \
-            -DHDF5_INTERFACE=OFF
+            -DHDF5_INTERFACE=OFF \
+            -DGMP_INTERFACE=OFF
 
       - name: Build
         run: cd build; make -j2; ccache --show-stats
@@ -114,7 +115,8 @@ jobs:
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} \
             -DCMAKE_CXX_FLAGS_DEBUGNOSYMBOLS="" \
-            -DHDF5_INTERFACE=OFF
+            -DHDF5_INTERFACE=OFF \
+            -DGMP_INTERFACE=OFF
 
       - name: Build
         run: cd build; make -j2; ccache --show-stats
@@ -172,6 +174,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} ^
             -DCMAKE_CXX_FLAGS_DEBUGNOSYMBOLS="/Od" -DCMAKE_EXE_LINKER_FLAGS_DEBUGNOSYMBOLS="" ^
             -DHDF5_INTERFACE=OFF ^
+            -DGMP_INTERFACE=OFF ^
             -B build ^
             -S .
 
