make p4 tet optional

--- a/src/validity/lageval/CMakeLists.txt
+++ b/src/validity/lageval/CMakeLists.txt
@@ -1,4 +1,7 @@
 file(GLOB SOURCES "*.cpp")
+if(NOT INSTANTIATE_3_3_4)
+    list(FILTER SOURCES EXCLUDE REGEX "lagrangeEvaluate_3_3_4\.cpp$")
+endif()
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
 target_sources(bezier PRIVATE ${SOURCES})
