fix compile error

--- a/src/numbers/CMakeLists.txt
+++ b/src/numbers/CMakeLists.txt
@@ -1,12 +1,12 @@
 set(SOURCES
     Interval.cpp
-    Matrix.cpp
 )
 
 set(HEADERS
     Interval.hpp
     Rational.hpp
     Matrix.hpp
+    Matrix.tpp
 )
 
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Source Files" FILES ${SOURCES})
