--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -135,7 +135,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [Debug]
+        config: [DebugNoSymbols]
         threading: [CPP]
     steps:
       - name: Checkout repository
@@ -184,4 +184,4 @@ jobs:
           cmake --build build -j2 && ccache --show-stats
 
       - name: Tests
-        run: cd build; ./tests/unit_tests
+        run: cd build; ctest --verbose --output-on-failure
